--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^1.7.4",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "pg": "^8.12.0"
   },
-  
   "devDependencies": {
     "nodemon": "^3.1.4"
   }
